[package]
name = "message_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.33.0"
async-trait = "0.1.77"
bytes = "1.5.0"
chrono = "0.4.31"
cron = "0.12.0"
futures = "0.3.30"
log = { version = "0.4.20" }
mockall = "0.12.1"
tokio = "1.35.1"
uuid = {version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"]}

[lib]
name = "message_scheduler"
path = "src/lib.rs"

crate-type = ["lib"]
