[package]
name = "message_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.33.0"
async-trait = "0.1.77"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
cron = "0.12.0"
futures = "0.3.30"
log = { version = "0.4.20" }
mockall = "0.12.1"
prometheus-client = "0.22.1"
prost = "0.12.3"
prost-types = "0.12.3"
ron = "0.8.1"
serde = "1.0.195"
serde_json = "1.0.111"
serde_with = { version = "3.4.0", features = ["chrono_0_4", "chrono"] }
sqlx = { version = "0.7.3", features = [
	"postgres",
	"runtime-tokio",
	"tls-rustls",
	"uuid",
	"time",
	"chrono",
] }
tokio = { version = "1.35.1", features = ["test-util"] }
tonic = "0.10.2"
uuid = { version = "1.6.1", features = [
	"v4",
	"fast-rng",
	"macro-diagnostics",
	"serde",
] }

[build-dependencies]
tonic-build = "0.10"

[lib]
name = "message_scheduler"
path = "src/lib.rs"

crate-type = ["lib"]
